--- a/git/formuladb-env/frmdb-apps/base-app/components-nav.html
+++ b/git/formuladb-env/frmdb-apps/base-app/components-nav.html
@@ -1,48 +1,48 @@
 <nav>
     <ul class="nav flex-column">
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Landing Page</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html" >Cover</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#thememediacards" >Media Cards</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionmainleft" >Media Section Main</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionminorright" >Media Section Left</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#themeiconcards" >Icon Cards</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/landing-page.html#mediasectionminorleft" >Media Section Right</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html" >Cover</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html#thememediacards" >Media Cards</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html#mediasectionmainleft" >Media Section Main</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html#mediasectionminorright" >Media Section Left</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html#themeiconcards" >Icon Cards</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/landing-page.html#mediasectionminorleft" >Media Section Right</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Content Page</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html" >Header</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#mainarticle" >Main Article</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#headings" >Heading Examples</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#display-headings" >Display Headings</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#body-text" >Body Text</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#blockquotes" >Blockquotes</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#lists" >Lists</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/content-page.html#text-utilities" >Text Utilities</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html" >Header</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#mainarticle" >Main Article</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#headings" >Heading Examples</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#display-headings" >Display Headings</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#body-text" >Body Text</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#blockquotes" >Blockquotes</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#lists" >Lists</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/content-page.html#text-utilities" >Text Utilities</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Basic Elements</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#navbars" >Navbars</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#buttons" >Buttons</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#tables" >Tables</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#navs" >Navs</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#indicators" >Indicators</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#progress" >Progress</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/elements.html#containers" >Containers</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/icons.html" >Icons</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#navbars" >Navbars</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#buttons" >Buttons</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#tables" >Tables</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#navs" >Navs</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#indicators" >Indicators</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#progress" >Progress</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/elements.html#containers" >Containers</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/icons.html" >Icons</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Overlays</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/overlays.html#modals" >Modals</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/overlays.html#popovers" >Popovers</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/overlays.html#tooltips" >Tooltips</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/overlays.html#toasts" >Toasts</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/overlays.html#modals" >Modals</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/overlays.html#popovers" >Popovers</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/overlays.html#tooltips" >Tooltips</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/overlays.html#toasts" >Toasts</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Form Inputs</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/forms.html#forms" >Forms</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/forms.html#forms" >Forms</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Components</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/components.html#tab-panel" >Tab Panel</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/components.html#tab-panel" >Nav Panel Vertical</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/components.html#carousel" >Carousel</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/components.html#pagination" >Pagination</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/components.html#infinite-scroll" >Infinite Scroll</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/components.html#tab-panel" >Tab Panel</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/components.html#tab-panel" >Nav Panel Vertical</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/components.html#carousel" >Carousel</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/components.html#pagination" >Pagination</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/components.html#infinite-scroll" >Infinite Scroll</a></li>
         <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Blocks</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/blocks.html#data-grid" >Data Grid</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/blocks.html#charts" >Charts</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/blocks.html#google-maps" >Google Maps</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/blocks.html#fullcalendar" >Full Calendar</a></li>
-        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/base-app/blocks.html#gallery" >Gallery</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/blocks.html#data-grid" >Data Grid</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/blocks.html#charts" >Charts</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/blocks.html#google-maps" >Google Maps</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/blocks.html#fullcalendar" >Full Calendar</a></li>
+        <li class="nav-item"><a class="pl-0 py-0 nav-link" target="frmdb-theme-page" href="../base-app/blocks.html#gallery" >Gallery</a></li>
     </ul>
 </nav>
