--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -7,7 +7,7 @@
     <meta name="frmdb_display_date" content="">
 </head>
 <body data-frmdb-record="Room_Booking~~__FRMDB_NEW_RECORD__" class="frmdb-editor-normal">
-    <header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+    <frmdb-t-header class="" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
         <div class="jumbotron">
             <h1 class="display-4">Book Now</h1>
         </div>
@@ -68,193 +68,173 @@
                 </div>
             </form>
         </div>
-    </header>
+    </frmdb-t-header>
     <section class="accomodation_area pt-3">
         <div class="container">
             <div class="section_title text-center mb-3">
                 <h2 class="title_color">Available Rooms</h2>
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
                 <div class="card-deck frmdb-cards-3">
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~07-Ball">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/interior-2685521_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~07-Ball">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/interior-2685521_1920.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Ball Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~06-Conference">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/living-room-581073_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~06-Conference">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/living-room-581073_1920.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Conference Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~05-EconomySigle">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/bedroom-1872196_1920.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~05-EconomySigle">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/bedroom-1872196_1920.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Economy Sigle</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~04-EconomyDouble">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room4.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~04-EconomyDouble">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/room4.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Economy Double</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~03-Honeymoon">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room3.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~03-Honeymoon">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/room3.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Honeymoon Suit</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~02-SigleDeluxe">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room2.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~02-SigleDeluxe">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/room2.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Single Deluxe Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~01-DoubleDeluxe">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="theme/image/room1.jpg" alt="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~01-DoubleDeluxe">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/room1.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Double Deluxe Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card2.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5>Card 2 title</h5>
                             <h6>Card 2 subtitle</h6>
                             <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card3.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5>Card 3 title</h5>
                             <h6>Card 3 subtitle</h6>
                             <p>Curabitur suscipit, massa eu maximus fringilla</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
-                    <div class="frmdb-t-card-media-main">
-                        <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
-                        </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
+                    <frmdb-t-card-media-main class="">
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/card4.jpg')"></frmdb-t-img>
                         <div class="card-body">
                             <h5>Card 4 title</h5>
                             <h6>Card 4 subtitle</h6>
                             <p>Etiam porta magna eu rutrum rhoncus</p>
                         </div>
-                        <div class="frmdb-t-card-action">
+                        <frmdb-t-card-action class="">
                             <a href="javascript:void(0)">Action</a>
-                        </div>
-                        <div class="frmdb-t-card-note">
+                        </frmdb-t-card-action>
+                        <frmdb-t-card-note class="">
                             <span>INFO 
                                 <small>info</small>
                             </span>
-                        </div>
-                    </div>
+                        </frmdb-t-card-note>
+                    </frmdb-t-card-media-main>
                 </div>
             </div>
         </div>
