--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -7,11 +7,11 @@
     <meta name="frmdb_display_date" content="">
 </head>
 <body data-frmdb-theme="Clean" class="frmdb-editor-normal">
-    <frmdb-t-main-nav>
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg');">
-        <frmdb-t-main>
+    <frmdb-t-cover style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg');; " class="">
+        <frmdb-t-main class="">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Relax And Enjoy</h1>
@@ -22,77 +22,77 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside>
+        <frmdb-t-aside class="">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-cover>
     <section class="frmdb-section-light container py-5">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Hotel Accomodation</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
-            <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg')"></frmdb-t-img>
+            <frmdb-t-card-media-main class="">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg'); "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 1 title</h5>
-                    <h6>Card 1 subtitle</h6>
-                    <p>Quisque ornare, quam a blandit malesuada</p>
+                    <h5 class="">Card 1 title</h5>
+                    <h6 class="">Card 1 subtitle</h6>
+                    <p class="">Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg')"></frmdb-t-img>
+            <frmdb-t-card-media-main class="">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg'); "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 2 title</h5>
-                    <h6>Card 2 subtitle</h6>
-                    <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
+                    <h5 class="">Card 2 title</h5>
+                    <h6 class="">Card 2 subtitle</h6>
+                    <p class="">Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg')"></frmdb-t-img>
+            <frmdb-t-card-media-main class="">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg'); "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 3 title</h5>
-                    <h6>Card 3 subtitle</h6>
-                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5 class="">Card 3 title</h5>
+                    <h6 class="">Card 3 subtitle</h6>
+                    <p class="">Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg')"></frmdb-t-img>
+            <frmdb-t-card-media-main class="">
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg'); "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 4 title</h5>
-                    <h6>Card 4 subtitle</h6>
-                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                    <h5 class="">Card 4 title</h5>
+                    <h6 class="">Card 4 subtitle</h6>
+                    <p class="">Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
@@ -100,8 +100,8 @@
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/hotel-booking/static/palm-966994_1920.jpg&quot;);">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/hotel-booking/static/palm-966994_1920.jpg&quot;);; " class="">
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5">
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </frmdb-t-media-section-main>
     <section class="container py-5 my-5">
         <div class="row">
@@ -129,47 +129,47 @@
             </div>
         </div>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg'); " class="">
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main>
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
                     </h4>
@@ -178,7 +178,7 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </frmdb-t-section-cards-icon>
     <section class="container py-5 my-5">
         <div class="row">
@@ -197,6 +197,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
